update online study week03